--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@mdi/font": "^5.8.55",
     "bootstrap": "^4.5.3",
+    "bootstrap-datepicker": "^1.9.0",
     "browser-sync": "^2.26.13",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
