--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "merge-stream": "^2.0.0",
-    "owl.carousel": "^2.3.4"
+    "owl.carousel": "^2.3.4",
+    "popper.js": "^1.16.1"
   }
 }
